--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@
   --size: 300px;
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   font-family: monospace, monospace;
@@ -34,7 +35,7 @@ body {
 
   > * {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
   }
 }
@@ -45,7 +46,6 @@ body {
   height: var(--size);
 
   transform: translateZ(calc(var(--size) / 2));
-
 
   .side {
     position: absolute;
@@ -69,32 +69,32 @@ body {
 
     &:nth-child(1) {
       transform: rotateX(90deg) translateZ(calc(var(--size) / 2));
-      background-color: #FF573344;
+      background-color: #ff573344;
     }
 
     &:nth-child(2) {
       transform: rotateY(90deg) translateZ(calc(var(--size) / 2));
-      background-color: #33FF4444;
+      background-color: #33ff4444;
     }
 
     &:nth-child(3) {
       transform: rotateY(-90deg) translateZ(calc(var(--size) / 2));
-      background-color: #3355FF44;
+      background-color: #3355ff44;
     }
 
     &:nth-child(4) {
       transform: rotateX(-90deg) translateZ(calc(var(--size) / 2));
-      background-color: #FF33CC44;
+      background-color: #ff33cc44;
     }
 
     &:nth-child(5) {
       transform: rotateY(180deg) translateZ(calc(var(--size) / 2));
-      background-color: #FFAA3344;
+      background-color: #ffaa3344;
     }
 
     &:nth-child(6) {
       transform: translateZ(calc(var(--size) / 2));
-      background-color: #33FFF344;
+      background-color: #33fff344;
     }
   }
 }
@@ -114,5 +114,4 @@ body {
     align-items: center;
     justify-content: center;
   }
-
 }
