--- a/styles.css
+++ b/styles.css
@@ -58,3 +58,44 @@ body {
     transform: translateZ(0);
   }
 }
+
+.crosshair-wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%, -50%);
+
+  .crosshair {
+    width: 30px;
+    height: 30px;
+
+    background: linear-gradient(
+        0,
+        transparent 45%,
+        lightgreen 45%,
+        lightgreen 55%,
+        transparent 55%
+      ),
+      linear-gradient(
+        90deg,
+        transparent 45%,
+        lightgreen 45%,
+        lightgreen 55%,
+        transparent 55%
+      );
+    clip-path: polygon(
+      0% 0%,
+      0% 100%,
+      25% 100%,
+      25% 25%,
+      75% 25%,
+      75% 75%,
+      25% 75%,
+      25% 100%,
+      100% 100%,
+      100% 0%
+    );
+  }
+}
