--- a/playermodel.css
+++ b/playermodel.css
@@ -64,160 +64,163 @@
   > .head {
     position: absolute;
 
-    --size: 15px;
+    --size: 10px;
     --a: var(--size);
     --b: var(--size);
     --c: var(--size);
 
-    transform: translate3d(calc(var(--c) / -2), calc(var(--b) / -2), 85px);
+    transform: translate3d(calc(var(--c) / -2), calc(var(--b) / -2), 46px);
   }
 
   > .torso {
     position: absolute;
 
-    --a: 35px;
-    --b: 40px;
-    --c: 20px;
+    --a: 18px;
+    --b: 20px;
+    --c: 14px;
 
-    transform: translate3d(calc(var(--c) / -2), calc(var(--b) / -2), 50px);
+    transform: translate3d(calc(var(--c) / -2), calc(var(--b) / -2), 28px);
   }
 
   > .left-arm {
-    transform-origin: 0 0 75px;
+    transform-origin: 0 0 40px;
     animation: swing 0.5s ease-in-out infinite alternate;
 
     > .left-arm-upper {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 12px;
+      --b: 5px;
+      --c: 5px;
 
       transform: translate3d(
         calc(var(--c) / -2),
-        calc(var(--b) / -2 - 25px),
-        55px
+        calc(var(--b) / -2 - 12px),
+        30px
       );
     }
 
     > .left-arm-lower {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 12px;
+      --b: 5px;
+      --c: 5px;
 
       transform-origin: calc(var(--c) / 2) 0 var(--a);
       transform: translate3d(
           calc(var(--c) / -2),
-          calc(var(--b) / -2 - 25px),
-          30px
+          calc(var(--b) / -2 - 12px),
+          16px
         )
         rotateY(75deg);
     }
   }
 
   > .right-arm {
-    transform-origin: 0 0 75px;
+    transform-origin: 0 0 40px;
     animation: swing 0.5s ease-in-out infinite alternate;
     animation-delay: 0.5s;
 
     > .right-arm-upper {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 12px;
+      --b: 5px;
+      --c: 5px;
 
       transform: translate3d(
         calc(var(--c) / -2),
-        calc(var(--b) / -2 + 25px),
-        55px
+        calc(var(--b) / -2 + 12px),
+        30px
       );
     }
 
     > .right-arm-lower {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 12px;
+      --b: 5px;
+      --c: 5px;
 
       transform-origin: calc(var(--c) / 2) 0 var(--a);
       transform: translate3d(
           calc(var(--c) / -2),
-          calc(var(--b) / -2 + 25px),
-          30px
+          calc(var(--b) / -2 + 12px),
+          16px
         )
         rotateY(75deg);
     }
   }
 
   > .left-leg {
-    transform-origin: 0 0 45px;
+    transform-origin: 0 0 25px;
+    animation: swing 0.5s ease-in-out infinite alternate;
+    animation-delay: 0.5s;
 
     > .left-leg-upper {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 14px;
+      --b: 5px;
+      --c: 5px;
 
       transform: translate3d(
         calc(var(--c) / -2),
-        calc(var(--b) / -2 - 10px),
-        25px
+        calc(var(--b) / -2 - 5px),
+        14px
       );
     }
 
     > .left-leg-lower {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 14px;
+      --b: 5px;
+      --c: 5px;
 
       transform-origin: calc(var(--c) / 2) 0 var(--a);
       transform: translate3d(
           calc(var(--c) / -2),
-          calc(var(--b) / -2 - 10px),
+          calc(var(--b) / -2 - 5px),
           0px
         )
-        rotateY(-15deg);
+        rotateY(-55deg);
     }
   }
 
   > .right-leg {
-    transform-origin: 0 0 45px;
+    transform-origin: 0 0 25px;
+    animation: swing 0.5s ease-in-out infinite alternate;
 
     > .right-leg-upper {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 14px;
+      --b: 5px;
+      --c: 5px;
 
       transform: translate3d(
         calc(var(--c) / -2),
-        calc(var(--b) / -2 + 10px),
-        25px
+        calc(var(--b) / -2 + 5px),
+        14px
       );
     }
 
     > .right-leg-lower {
       position: absolute;
 
-      --a: 25px;
-      --b: 10px;
-      --c: 10px;
+      --a: 14px;
+      --b: 5px;
+      --c: 5px;
 
       transform-origin: calc(var(--c) / 2) 0 var(--a);
       transform: translate3d(
           calc(var(--c) / -2),
-          calc(var(--b) / -2 + 10px),
+          calc(var(--b) / -2 + 5px),
           0px
         )
-        rotateY(-15deg);
+        rotateY(-55deg);
     }
   }
 }
