--- a/styles.css
+++ b/styles.css
@@ -324,10 +324,36 @@ dialog.menu {
   .col {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     gap: 16px;
     height: 100%;
+
+    > .item {
+      width: 100%;
+      display: flex;
+      gap: 16px;
+      align-items: center;
+
+      > img {
+        max-height: 40px;
+      }
+    }
+  }
+
+  .key {
+    padding: 12px 16px;
+    min-height: 40px;
+    min-width: 40px;
+    background: white;
+    color: black;
+    border-radius: 8px;
+    font-size: 14px;
+
+    user-select: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   img {
