--- a/styles/index.css
+++ b/styles/index.css
@@ -7,4 +7,5 @@
 @import url("/styles/menu.css");
 @import url("/styles/playermodel.css");
 @import url("/styles/scoreboard.css");
+@import url("/styles/score-msg.css");
 @import url("/styles/viewmodel.css");
