feat: generate powerups

--- a/styles/index.css
+++ b/styles/index.css
@@ -9,3 +9,4 @@
 @import url("/styles/scoreboard.css");
 @import url("/styles/score-msg.css");
 @import url("/styles/viewmodel.css");
+@import url("/styles/powerup.css");
