--- a/styles/styles.css
+++ b/styles/styles.css
@@ -187,3 +187,12 @@ body {
     transform: translateZ(var(--a));
   }
 }
+
+#fps {
+  position: fixed;
+  top: 16px;
+  right: 16px;
+
+  font-size: 24px;
+  color: red;
+}
